--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+
     //exo player dependencies
     implementation 'im.ene.toro3:toro:3.0.0-beta1'
     implementation 'com.google.android.exoplayer:exoplayer:r2.4.3'
