--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,9 +26,11 @@
         android:roundIcon="@mipmap/app_iconrounded"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.SingleVideoPlayActivity"
-            android:screenOrientation="portrait">
-        </activity>
+        <activity android:name=".activities.MySoundsActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".activities.SingleVideoPlayActivity"
+            android:screenOrientation="portrait"></activity>
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
