--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-v4:28.0.0'
+    implementation "com.android.support:support-core-utils:28.0.0"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -41,7 +42,7 @@ dependencies {
     //exo player dependencies
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.twitter.sdk.android:twitter-core:3.1.1'
-    implementation 'com.facebook.android:facebook-android-sdk:4.6.0'
+    /*implementation 'com.facebook.android:facebook-android-sdk:4.6.0'*/
     implementation 'com.squareup.retrofit2:retrofit:2.1.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.3.1'
