--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".activities.MySoundsActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait"
+            ></activity>
         <activity
             android:name=".activities.SingleVideoPlayActivity"
             android:screenOrientation="portrait" />
@@ -51,7 +52,8 @@
         </activity>
         <activity
             android:name=".activities.MakingVideoActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            />
         <activity
             android:name=".CommonEmptyActivity"
             android:screenOrientation="portrait" />
