--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,12 +23,18 @@
         android:allowBackup="true"
         android:icon="@mipmap/app_icon"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/app_iconrounded"
         android:supportsRtl="true"
-        android:largeHeap="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.DisplayLocalVodsImagesActivity"
+        <activity android:name=".activities.ChangepasswordActivity"
             android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".activities.EditProfileActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.DisplayLocalVodsImagesActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.MySoundsActivity"
             android:screenOrientation="portrait" />
