--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,9 +26,14 @@
         android:largeHeap="true"
         android:roundIcon="@mipmap/app_iconrounded"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".activities.ChangepasswordActivity"
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".activities.ServerSoundsCompletelistingActivity"
             android:screenOrientation="portrait"></activity>
+        <activity android:name=".activities.CommentsActivity" />
+        <activity
+            android:name=".activities.ChangepasswordActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.EditProfileActivity"
             android:screenOrientation="portrait" />
