--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,10 +28,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activities.ServerSoundsCompletelistingActivity"
+        <activity android:name=".activities.UserProfileActivity"
             android:screenOrientation="portrait"></activity>
-        <activity android:name=".activities.CommentsActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activities.ServerSoundsCompletelistingActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.CommentsActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.ChangepasswordActivity"
             android:screenOrientation="portrait" />
