--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,10 +4,8 @@
     package="com.app.hulchul">
 
     <uses-sdk tools:overrideLibrary="com.facebook" />
-
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
-
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -28,8 +26,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activities.AbuseSelectionActivity"
+        <activity android:name=".activities.SearchActivity"
             android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".activities.AbuseSelectionActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.UserProfileActivity"
             android:screenOrientation="portrait" />
