--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,10 @@
     package="com.app.hulchul">
 
     <uses-sdk tools:overrideLibrary="com.facebook" />
+
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
+
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -27,8 +29,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activities.SearchActivity"
+        <activity android:name=".activities.VideoPosting_Activity"
             android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".activities.SearchActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.AbuseSelectionActivity"
             android:screenOrientation="portrait" />
@@ -109,6 +114,7 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_provider_paths" />
         </provider>
+
         <service
             android:name=".fileuploadservice.FileUploadService"
             android:permission="android.permission.BIND_JOB_SERVICE" />
