--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,9 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
 
+    //camera gallery picker
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.+'
+
     //exo player dependencies
     implementation 'im.ene.toro3:toro:3.0.0-beta1'
     implementation 'com.google.android.exoplayer:exoplayer:r2.4.3'
