--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,10 @@
         android:roundIcon="@mipmap/app_iconrounded"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true"
+        tools:replace="android:appComponentFactory"
+        android:appComponentFactory="whateverString">
+
         <activity android:name=".activities.DraftsActivity"
             android:screenOrientation="portrait"></activity>
         <activity
@@ -107,6 +110,9 @@
         <activity
             android:name=".activities.SelectInterestsActivity"
             android:screenOrientation="portrait" />
+
+        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat"/>
 
         <provider
             android:name="android.support.v4.content.FileProvider"
