--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,8 +31,14 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:replace="android:appComponentFactory">
-        <activity android:name=".activities.PlayvideosCategorywise_Activity"
+        <activity android:name=".activities.HashtagSearchresultsActivity"
             android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".activities.SoundsSearchresultsActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.PlayvideosCategorywise_Activity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.DraftsActivity"
             android:screenOrientation="portrait" />
