--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,10 @@
     package="com.app.hulchul">
 
     <uses-sdk tools:overrideLibrary="com.facebook" />
+
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
+
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -29,8 +31,14 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:replace="android:appComponentFactory">
-        <activity android:name=".activities.SettingsActivity"
+        <activity android:name=".activities.ChangePhoneNumberActivity"
             android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".activities.PushnotificationsettingsActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.SettingsActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.FavouritesActivity"
             android:screenOrientation="portrait" />
