--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,8 +31,11 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:replace="android:appComponentFactory">
-        <activity android:name=".activities.SelectSoundsActivity"
+        <activity android:name=".activities.PlaylistActivity"
             android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".activities.SelectSoundsActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.ChangePhoneNumberActivity"
             android:screenOrientation="portrait" />
