--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -31,8 +32,15 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:replace="android:appComponentFactory">
-        <activity android:name=".activities.PlaylistActivity"
+        <activity android:name=".activities.InviteFriendsActivity"
             android:screenOrientation="portrait"></activity>
+        <activity android:name=".activities.FindContactsActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.FindFriendsActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activities.PlaylistActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.SelectSoundsActivity"
             android:screenOrientation="portrait" />
