--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,12 +32,20 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:replace="android:appComponentFactory">
-        <activity android:name=".activities.InviteFriendsActivity"
+        <activity android:name=".activities.SafetyOptionsActivity"
             android:screenOrientation="portrait"></activity>
-        <activity android:name=".activities.FindContactsActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".activities.FindFriendsActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activities.PrivacyAndSafetyActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.InviteFriendsActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.FindContactsActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.FindFriendsActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.PlaylistActivity"
             android:screenOrientation="portrait" />
